apps/qbittorrent/networkpolicies/ingress-allow-arr.yaml
---
# sonarr and radarr call qBittorrent's API to add torrents.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-arr
  namespace: qbittorrent
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sonarr
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: radarr
